--- a/src/views/genres.hbs
+++ b/src/views/genres.hbs
@@ -1,20 +1,24 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 p-3 mt-3 border-3" style="background-color: #00a9da;">The
-      Loai</div>
+    <div
+      class="col-12 p-3 mt-3 border-3"
+      style="background-color: #00a9da;"
+    >{{this.genres}}</div>
     <div class="col-12 p-3 mt-3 border-3">
-      <div class="card p-2" style="width: 14rem">
-        <img
-          class="card-img-top"
-          src="./image/anh-test.png"
-          alt="Card image cap"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Tên tác giả</h5>
-          <p class="card-text">1 vài thông tin</p>
-          <a href="#" class="btn btn-primary">Xem chi tiết</a>
+      {{#each books}}
+        <div class="card p-2" style="width: 14rem">
+          <img
+            class="card-img-top"
+            src="{{this.image}}"
+            alt="{{this.nameBook}}"
+          />
+          <div class="card-body">
+            <h5 class="card-title">{{this.nameBook}}</h5>
+            <p class="card-text">{{this.genres}}</p>
+            <a href="#" class="btn btn-primary">Xem chi tiết</a>
+          </div>
         </div>
-      </div>
+      {{/each}}
     </div>
 
   </div>
