--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -120,6 +120,8 @@ body {
 
 /* footer */
 footer {
+    display: flex;
+    justify-content: space-between;
     position: relative;
     bottom: 0;
     left: 0;
