--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -79,7 +79,7 @@
     </div>
 
     <!--  -->
-    <a href="#" style="text-decoration: none">
+    {{! <a href="#" style="text-decoration: none">
       <div class="card card-generics m-2" style="width: 18rem">
         <div class="card-body">
           <img src="./image/tieu-thuyet.jpg" />
@@ -93,7 +93,7 @@
           </div>
         </div>
       </div>
-    </a>
+    </a> }}
 
     {{#each books}}
       <a href="#" style="text-decoration: none">
