--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -37,7 +37,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home
+        <a class="nav-link" href="/">Home
           <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item dropdown">
@@ -50,9 +50,9 @@
           <span class="caret"></span>
         </a>
         <div class="dropdown-menu" aria-labelledby="dropdown_target">
-          <a href="#" class="dropdown-item">Hài hước</a>
-          <a href="#" class="dropdown-item">Kinh dị</a>
-          <a href="#" class="dropdown-item">Lãng mạn</a>
+          <a href="/hai-huoc" class="dropdown-item">Hài hước</a>
+          <a href="/kinh-di" class="dropdown-item">Kinh dị</a>
+          <a href="/lang-man" class="dropdown-item">Lãng mạn</a>
         </div>
       </li>
       <li class="nav-item">
@@ -60,6 +60,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="/admin">Admin</a>
       </li>
     </ul>
   </div>
