--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -96,7 +96,85 @@ body {
 
 /* footer */
 footer {
+  display: flex;
+  justify-content: space-between;
   position: relative;
   bottom: 0;
   left: 0;
   right: 0; }
+
+.login .login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+  border-radius: 12px;
+  height: 400px;
+  min-width: 20%;
+  background-color: #dadada; }
+
+.login .login-title {
+  font-weight: 700;
+  font-size: 1.5rem; }
+
+.login form {
+  display: flex;
+  margin-top: 1rem;
+  font-size: 0.85rem;
+  font-weight: 600;
+  width: 200px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start; }
+
+.login input {
+  border: none;
+  padding: 0.35rem;
+  font-family: "Inter", sans-serif;
+  margin: 0.75rem 0;
+  border-radius: 4px;
+  width: 100%; }
+
+.login button {
+  cursor: pointer;
+  border: none;
+  align-self: center;
+  margin-top: 1rem;
+  font-size: 1rem;
+  padding: 0.65rem;
+  border-radius: 4px;
+  color: white;
+  background-color: #a1a1a1; }
+
+.login .login-register {
+  margin: 2rem 1rem 0 1rem;
+  font-size: 1rem; }
+
+.login .login-register-link {
+  text-decoration: none;
+  cursor: pointer;
+  margin-top: 1rem;
+  color: dimgray;
+  font-weight: 700; }
+
+.register .register-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
+  border-radius: 12px;
+  height: 400px;
+  min-width: 20%;
+  background-color: #dadada;
+  text-align: center; }
+
+.register .register-title {
+  font-weight: 700;
+  font-size: 1.5rem; }
+
+.register .register-error {
+  margin-top: 1rem;
+  align-self: center;
+  color: #ff0037; }
