--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -56,10 +56,10 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Login</a>
+        <a class="nav-link disabled" href="/login">Login</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="/admin">Admin</a>
