--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -62,6 +62,15 @@
         <a class="nav-link disabled" href="/login">Login</a>
       </li>
       <li class="nav-item">
+        <form action="/logout" method="post">
+          <a class="nav-link disabled"><input
+              type="submit"
+              value="Logout"
+            /></a>
+
+        </form>
+      </li>
+      <li class="nav-item">
         <a class="nav-link disabled" href="/admin">Admin</a>
       </li>
     </ul>
