--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -3,8 +3,8 @@
 <div class="container-fluid p-2">
   <div class="row text-center border-2 p-2 m-2">
     <div class="col-12">
-      <h2>
-        <span style="color: #00e1ff">W</span>
+      <h2 style="color:brown">Welcome to Book-Tells-me
+        {{! <span style="color: #00e1ff">W</span>
         <span style="color: #ffa600">e</span>
         <span style="color: #00ff1e">l</span>
         <span style="color: #ea00ff">c</span>
@@ -27,12 +27,12 @@
         <span style="color: #3300ff">s</span>
         <span style="color: #c300ff">-</span>
         <span style="color: #00ff1e">m</span>
-        <span style="color: #00eeff">e</span>
+        <span style="color: #00eeff">e</span> }}
       </h2>
     </div>
     <div class="col-md-6 col-xs-12 d-flex flex-column justify-content-center">
       <h3 style="color: orange">Book</h3>
-      <h1 style="color: green">Here for what you need</h1>
+      <h1 style="color: rgb(0, 36, 128)">Here for what you need</h1>
       <p style="color: brown">
         Here is a collection of things that you don't know in your whole life,
         if you know, please share it with the community.
@@ -49,9 +49,9 @@
 </div>
 
 <div class="container-fluid p-2">
-  <div class="row text-center border-3 p-2 m-2">
+  <div class="row text-center border-2 p-2 m-2">
     <div class="col-12">
-      <h2 style="color: rgb(17, 231, 120)">Why is Book-Tells-me</h2>
+      <h2 style="color: brown">Why is Book-Tells-me</h2>
     </div>
     <div class="col-md-6 col-xs-12">
       <img
@@ -139,9 +139,9 @@
 
 <!-- Supported by -->
 <div class="container-fluid pt-2">
-  <div class="row text-center border-3 p-2 m-2">
+  <div class="row text-center border-2 p-2 m-2">
     <div class="col-12 p-2">
-      <h2 style="color: rgb(231, 174, 17); font-weight: 700">
+      <h2 style="color: brown; font-weight: 700">
         Sponsored by
       </h2>
     </div>
