--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -4,12 +4,13 @@
   style="opacity: 0.9"
 >
   <a class="navbar-brand logo-text">Book-Tells-me</a>
-  <form class="form-inline">
+  <form class="form-inline" action="#">
     <input
       class="form-control mr-sm-2"
       type="search"
       placeholder="Search"
       aria-label="Search"
+      name="nameBook"
     />
     <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">
       Search
